data/all_generated_tests/raw_wast_tests/nop_ImproperFunctionCallorReturnHandling_636.wast
;; 7. Develop a function with `nop` before a loop that includes a `call` inside it. Ensure that each iteration of the loop makes the correct function call, ensuring `nop` doesn't disrupt the loop control and call sequence.

(assert_invalid
  (module 
    (func $do_nothing (nop))
    (func $loop_with_call
      (nop)
      (loop 
        (call $do_nothing)
        (br 1)
      )
    )
  )
  "type mismatch"
)